Built-in tor support

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -13,8 +13,9 @@
   "connectionSetupAddressHint": "e.g. 192.168.1.1:18090 or example.com:18090",
   "connectionSetupProxyPortLabel": "Proxy Port (optional)",
   "connectionSetupProxyPortHint": "e.g. 4444 for I2P",
+  "connectionSetupUseTorLabel": "Use Tor",
   "connectionSetupUseSslLabel": "Use SSL",
-  "connectionSetupTestConnectionButton": "TestConnection",
+  "connectionSetupTestConnectionButton": "Test Connection",
   "connectionSetupContinueButton": "Continue",
   "createWalletTitle": "Create Wallet",
   "createWalletDescription": "Do you already have a Monero wallet seed, or do you need to make a new one?",
@@ -42,13 +43,13 @@
   "receiveShareButton": "Share",
   "receiveShowSubaddressButton": "Show Subaddress",
   "receiveShowPrimaryAddressButton": "Show Primary Address",
-  "sendTitle": "Enviar",
-  "sendAddressLabel": "Endereco",
-  "sendAmountLabel": "Quantia",
-  "sendCancelButton": "Cancelar",
-  "sendSendButton": "Enviar",
-  "sendOpenAliasResolveError": "OpenAlias invalido.",
-  "sendInvalidAddressError": "Endereco invalido.",
+  "sendTitle": "Send",
+  "sendAddressLabel": "Address",
+  "sendAmountLabel": "Amount",
+  "sendCancelButton": "Cancel",
+  "sendSendButton": "Send",
+  "sendOpenAliasResolveError": "Invalid OpenAlias.",
+  "sendInvalidAddressError": "Invalid address.",
   "settingsTitle": "Settings",
   "settingsNotifyNewTxs": "Notify New Transactions",
   "settingsLanguageLabel": "Language",
