UI improvements part 1

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,12 +1,12 @@
 {
   "@@locale": "en",
+  "cancel": "Cancelar",
   "welcomeTitle": "Welcome!",
   "welcomeDescription": "Light Monero Wallet is one of the simplest Monero wallets. We will help you set up a wallet and connect to a server.",
   "welcomeGetStarted": "Get Started",
   "restoreWarningTitle": "Restore Warning",
   "restoreWarningDescription": "Are you sure? The server that you connect to will be able to see your past and future Monero transaction history.",
   "restoreWarningContinueButton": "Continue",
-  "restoreWarningCancelButton": "Cancel",
   "connectionSetupTitle": "Connection Setup",
   "connectionSetupDescription": "Let's setup a connection with LWS.",
   "connectionSetupAddressLabel": "Address",
@@ -28,16 +28,14 @@
   "restoreWalletDescription": "Input your Monero seed below. We will check common formats.",
   "restoreWalletSeedLabel": "Seed",
   "restoreWalletRestoreHeightLabel": "Restore Height",
-  "restoreWalletCancelButton": "Cancel",
   "restoreWalletRestoreButton": "Restore",
-  "homeConnected": "Connected",
-  "homeSynced": "Synced",
+  "navigationBarWallet": "Wallet",
+  "navigationBarSettings": "Settings",
+  "homeConnecting": "Connecting",
+  "homeSyncing": "Syncing",
   "homeHeight": "Height",
-  "homeBalance": "Balance",
   "homeReceive": "Receive",
   "homeSend": "Send",
-  "homeSettings": "Settings",
-  "homeDelete": "Delete",
   "receivePrimaryAddressWarn": "Warning: For better privacy, consider using subaddresses if supported by your light wallet server.",
   "receiveSubaddressWarn": "Warning: Make sure your light wallet server supports subaddresses, otherwise, you will not be able to see incoming transactions.",
   "receiveShareButton": "Share",
@@ -46,13 +44,16 @@
   "sendTitle": "Send",
   "sendAddressLabel": "Address",
   "sendAmountLabel": "Amount",
-  "sendCancelButton": "Cancel",
   "sendSendButton": "Send",
   "sendOpenAliasResolveError": "Invalid OpenAlias.",
   "sendInvalidAddressError": "Invalid address.",
+  "sendInsufficientBalanceError": "Insufficient balance.",
   "settingsTitle": "Settings",
   "settingsNotifyNewTxs": "Notify New Transactions",
   "settingsLanguageLabel": "Language",
+  "settingsDeleteWalletButton": "Delete Wallet",
+  "settingsDeleteWalletDialogText": "Are you sure you want to delete your wallet? You will lose access to your funds unless you have backed up your seed phrase.",
+  "settingsDeleteWalletDialogDeleteButton": "Delete",
   "txDetailsHashLabel": "Hash",
   "txDetailsAmountLabel": "Amount",
   "txDetailsFeeLabel": "Fee",
