--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -1,12 +1,12 @@
 {
   "@@locale": "pt",
+  "cancel": "Cancelar",
   "welcomeTitle": "Bem-vindo!",
   "welcomeDescription": "A Light Monero Wallet é uma das carteiras Monero mais simples. Nós o ajudaremos a configurar uma carteira e se conectar a um servidor.",
   "welcomeGetStarted": "Começar",
   "restoreWarningTitle": "Aviso de Restauração",
   "restoreWarningDescription": "Você tem certeza? O servidor ao qual você se conectar poderá ver seu histórico de transações Monero passadas e futuras.",
   "restoreWarningContinueButton": "Continuar",
-  "restoreWarningCancelButton": "Cancelar",
   "connectionSetupTitle": "Configuração da Conexão",
   "connectionSetupDescription": "Vamos configurar uma conexão com o LWS.",
   "connectionSetupAddressLabel": "Endereço",
@@ -28,31 +28,32 @@
   "restoreWalletDescription": "Insira sua semente Monero abaixo. Verificaremos os formatos comuns.",
   "restoreWalletSeedLabel": "Semente",
   "restoreWalletRestoreHeightLabel": "Altura de Restauração",
-  "restoreWalletCancelButton": "Cancelar",
   "restoreWalletRestoreButton": "Restaurar",
-  "homeConnected": "Conectado",
-  "homeSynced": "Sincronizado",
-  "homeHeight": "Altura",
-  "homeBalance": "Saldo",
+  "navigationBarWallet": "Carteira",
+  "navigationBarSettings": "Configurações",
+  "homeConnecting": "Conectando",
+  "homeSyncing": "Sincronizando",
+  "homeHeight": "Bloco",
   "homeReceive": "Receber",
   "homeSend": "Enviar",
-  "homeSettings": "Configurações",
-  "homeDelete": "Excluir",
   "receivePrimaryAddressWarn": "Aviso: Para maior privacidade, considere usar subendereços se o seu servidor de light wallet os suportar.",
-  "receiveSubaddressWarn": "Aviso: Certifique-se de que seu servidor de carteira leve suporta subendereços, caso contrário, você não conseguirá ver as transações recebidas.",
+  "receiveSubaddressWarn": "Aviso: Certifique-se de que seu servidor de light wallet suporta subendereços, caso contrário, você não conseguirá ver as transações recebidas.",
   "receiveShareButton": "Compartilhar",
   "receiveShowSubaddressButton": "Mostrar Subendereço",
   "receiveShowPrimaryAddressButton": "Mostrar Endereço Principal",
   "sendTitle": "Enviar",
   "sendAddressLabel": "Endereço",
   "sendAmountLabel": "Valor",
-  "sendCancelButton": "Cancelar",
   "sendSendButton": "Enviar",
   "sendOpenAliasResolveError": "OpenAlias inválido.",
   "sendInvalidAddressError": "Endereço inválido.",
+  "sendInsufficientBalanceError": "Saldo insuficiente.",
   "settingsTitle": "Configurações",
   "settingsNotifyNewTxs": "Notificar Novas Transações",
   "settingsLanguageLabel": "Idioma",
+  "settingsDeleteWalletButton": "Excluir Carteira",
+  "settingsDeleteWalletDialogText": "Tem certeza que deseja excluir sua carteira? Você perderá acesso à seus fundos, a menos que tenha anotado sua semente.",
+  "settingsDeleteWalletDialogDeleteButton": "Excluir",
   "txDetailsHashLabel": "Hash",
   "txDetailsAmountLabel": "Valor",
   "txDetailsFeeLabel": "Taxa",
