UI improvements part 2

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -36,6 +36,12 @@
   "homeHeight": "Height",
   "homeReceive": "Receive",
   "homeSend": "Send",
+  "homeBalanceLocked": "locked",
+  "homeTransactionsTitle": "Transactions",
+  "homeOutgoingTxSemanticLabel": "Outgoing Transaction",
+  "homeIncomingTxSemanticLabel": "Incoming Transaction",
+  "homeTransactionPending": "Pending",
+  "homeTransactionConfirmed": "Confirmed",
   "receivePrimaryAddressWarn": "Warning: For better privacy, consider using subaddresses if supported by your light wallet server.",
   "receiveSubaddressWarn": "Warning: Make sure your light wallet server supports subaddresses, otherwise, you will not be able to see incoming transactions.",
   "receiveShareButton": "Share",
@@ -54,6 +60,7 @@
   "settingsDeleteWalletButton": "Delete Wallet",
   "settingsDeleteWalletDialogText": "Are you sure you want to delete your wallet? You will lose access to your funds unless you have backed up your seed phrase.",
   "settingsDeleteWalletDialogDeleteButton": "Delete",
+  "txDetailsTitle": "Transaction",
   "txDetailsHashLabel": "Hash",
   "txDetailsAmountLabel": "Amount",
   "txDetailsFeeLabel": "Fee",
