--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -36,11 +36,17 @@
   "homeHeight": "Bloco",
   "homeReceive": "Receber",
   "homeSend": "Enviar",
+  "homeBalanceLocked": "travado",
+  "homeTransactionsTitle": "Transações",
+  "homeOutgoingTxSemanticLabel": "Transação de Saída",
+  "homeIncomingTxSemanticLabel": "Transação de Entrada",
+  "homeTransactionPending": "Pendente",
+  "homeTransactionConfirmed": "Confirmado",
   "receivePrimaryAddressWarn": "Aviso: Para maior privacidade, considere usar subendereços se o seu servidor de light wallet os suportar.",
   "receiveSubaddressWarn": "Aviso: Certifique-se de que seu servidor de light wallet suporta subendereços, caso contrário, você não conseguirá ver as transações recebidas.",
   "receiveShareButton": "Compartilhar",
   "receiveShowSubaddressButton": "Mostrar Subendereço",
-  "receiveShowPrimaryAddressButton": "Mostrar Endereço Principal",
+  "receiveShowPrimaryAddressButton": "Mostrar Endereço Primário",
   "sendTitle": "Enviar",
   "sendAddressLabel": "Endereço",
   "sendAmountLabel": "Valor",
@@ -54,6 +60,7 @@
   "settingsDeleteWalletButton": "Excluir Carteira",
   "settingsDeleteWalletDialogText": "Tem certeza que deseja excluir sua carteira? Você perderá acesso à seus fundos, a menos que tenha anotado sua semente.",
   "settingsDeleteWalletDialogDeleteButton": "Excluir",
+  "txDetailsTitle": "Transação",
   "txDetailsHashLabel": "Hash",
   "txDetailsAmountLabel": "Valor",
   "txDetailsFeeLabel": "Taxa",
