UI improvements part 3 and bug fixes

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,6 +1,8 @@
 {
   "@@locale": "en",
   "cancel": "Cancelar",
+  "unknownError": "Unknown error.",
+  "fieldEmptyError": "This field cannot be empty.",
   "welcomeTitle": "Welcome!",
   "welcomeDescription": "Light Monero Wallet is one of the simplest Monero wallets. We will help you set up a wallet and connect to a server.",
   "welcomeGetStarted": "Get Started",
@@ -29,6 +31,7 @@
   "restoreWalletSeedLabel": "Seed",
   "restoreWalletRestoreHeightLabel": "Restore Height",
   "restoreWalletRestoreButton": "Restore",
+  "restoreWalletInvalidMnemonic": "Invalid mnemonic.",
   "navigationBarWallet": "Wallet",
   "navigationBarSettings": "Settings",
   "homeConnecting": "Connecting",
@@ -51,6 +54,7 @@
   "sendAddressLabel": "Address",
   "sendAmountLabel": "Amount",
   "sendSendButton": "Send",
+  "sendTransactionSuccessfullySent": "Transaction successfully sent!",
   "sendOpenAliasResolveError": "Invalid OpenAlias.",
   "sendInvalidAddressError": "Invalid address.",
   "sendInsufficientBalanceError": "Insufficient balance.",
