--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -1,6 +1,8 @@
 {
   "@@locale": "pt",
   "cancel": "Cancelar",
+  "unknownError": "Erro desconhecido.",
+  "fieldEmptyError": "Este campo não pode ficar vazio.",
   "welcomeTitle": "Bem-vindo!",
   "welcomeDescription": "A Light Monero Wallet é uma das carteiras Monero mais simples. Nós o ajudaremos a configurar uma carteira e se conectar a um servidor.",
   "welcomeGetStarted": "Começar",
@@ -27,8 +29,9 @@
   "restoreWalletTitle": "Restaurar Carteira",
   "restoreWalletDescription": "Insira sua semente Monero abaixo. Verificaremos os formatos comuns.",
   "restoreWalletSeedLabel": "Semente",
-  "restoreWalletRestoreHeightLabel": "Altura de Restauração",
+  "restoreWalletRestoreHeightLabel": "Bloco de Restauração",
   "restoreWalletRestoreButton": "Restaurar",
+  "restoreWalletInvalidMnemonic": "Semente inválida.",
   "navigationBarWallet": "Carteira",
   "navigationBarSettings": "Configurações",
   "homeConnecting": "Conectando",
@@ -51,6 +54,7 @@
   "sendAddressLabel": "Endereço",
   "sendAmountLabel": "Valor",
   "sendSendButton": "Enviar",
+  "sendTransactionSuccessfullySent": "Transação enviada com sucesso!",
   "sendOpenAliasResolveError": "OpenAlias inválido.",
   "sendInvalidAddressError": "Endereço inválido.",
   "sendInsufficientBalanceError": "Saldo insuficiente.",
@@ -65,7 +69,7 @@
   "txDetailsAmountLabel": "Valor",
   "txDetailsFeeLabel": "Taxa",
   "txDetailsTimeAndDateLabel": "Data e Hora",
-  "txDetailsConfirmationHeightLabel": "Altura de Confirmação",
+  "txDetailsConfirmationHeightLabel": "Bloco de Confirmação",
   "txDetailsConfirmationsLabel": "Confirmações",
   "txDetailsViewKeyLabel": "Chave de Visualização",
   "txDetailsRecipientsLabel": "Destinatários"
