--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -52,6 +52,7 @@
   "homeIncomingTxSemanticLabel": "Transação de Entrada",
   "homeTransactionPending": "Pendente",
   "homeTransactionConfirmed": "Confirmado",
+  "homeNoTransactions": "Sem transações",
   "receivePrimaryAddressWarn": "Aviso: Para maior privacidade, considere usar subendereços se o seu servidor de light wallet os suportar.",
   "receiveSubaddressWarn": "Aviso: Certifique-se de que seu servidor de light wallet suporta subendereços, caso contrário, você não conseguirá ver as transações recebidas.",
   "receiveShareButton": "Compartilhar",
@@ -68,6 +69,7 @@
   "settingsTitle": "Configurações",
   "settingsNotifyNewTxs": "Notificar Novas Transações",
   "settingsLanguageLabel": "Idioma",
+  "settingsDisplayCurrencyLabel": "Moeda Local",
   "settingsDeleteWalletButton": "Excluir Carteira",
   "settingsDeleteWalletDialogText": "Tem certeza que deseja excluir sua carteira? Você perderá acesso à seus fundos, a menos que tenha anotado sua semente.",
   "settingsDeleteWalletDialogDeleteButton": "Excluir",
@@ -80,10 +82,12 @@
   "txDetailsConfirmationsLabel": "Confirmações",
   "txDetailsViewKeyLabel": "Chave de Visualização",
   "txDetailsRecipientsLabel": "Destinatários",
+  "keysTitle": "Chaves",
   "keysPrimaryAddress": "Endereço Primário",
   "keysRestoreHeight": "Bloco de Restauração",
   "keysSecretSpendKey": "Chave Privada de Gasto",
   "keysPublicSpendKey": "Chave Pública de Gasto",
   "keysSecretViewKey": "Chave Privada de Visualização",
-  "keysPublicViewKey": "Chave Pública de Visualização"
+  "keysPublicViewKey": "Chave Pública de Visualização",
+  "scanQrTitle": "Escanear QR Code"
 }
