Add confirm send screen

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -3,6 +3,9 @@
   "continueText": "Continue",
   "cancel": "Cancel",
   "unknownError": "Unknown error.",
+  "amount": "Amount",
+  "networkFee": "Network Fee",
+  "address": "Address",
   "fieldEmptyError": "This field cannot be empty.",
   "welcomeTitle": "Welcome!",
   "welcomeDescription": "Light Monero Wallet is one of the simplest Monero wallets. We will help you set up a wallet and connect to a server.",
@@ -12,7 +15,6 @@
   "restoreWarningContinueButton": "Continue",
   "connectionSetupTitle": "Connection Setup",
   "connectionSetupDescription": "Let's setup a connection with LWS.",
-  "connectionSetupAddressLabel": "Address",
   "connectionSetupAddressHint": "e.g. 192.168.1.1:18090 or example.com:18090",
   "connectionSetupProxyPortLabel": "HTTP Proxy Port (optional)",
   "connectionSetupProxyPortHint": "e.g. 4444 for I2P",
@@ -59,8 +61,6 @@
   "receiveShowSubaddressButton": "Show Subaddress",
   "receiveShowPrimaryAddressButton": "Show Primary Address",
   "sendTitle": "Send",
-  "sendAddressLabel": "Address",
-  "sendAmountLabel": "Amount",
   "sendSendButton": "Send",
   "sendTransactionSuccessfullySent": "Transaction successfully sent!",
   "sendOpenAliasResolveError": "Invalid OpenAlias.",
@@ -75,8 +75,6 @@
   "settingsDeleteWalletDialogDeleteButton": "Delete",
   "txDetailsTitle": "Transaction",
   "txDetailsHashLabel": "Hash",
-  "txDetailsAmountLabel": "Amount",
-  "txDetailsFeeLabel": "Fee",
   "txDetailsTimeAndDateLabel": "Time and Date",
   "txDetailsConfirmationHeightLabel": "Confirmation Height",
   "txDetailsConfirmationsLabel": "Confirmations",
@@ -89,5 +87,7 @@
   "keysPublicSpendKey": "Public Spend Key",
   "keysSecretViewKey": "Secret View Key",
   "keysPublicViewKey": "Public View Key",
-  "scanQrTitle": "Scan QR Code"
+  "scanQrTitle": "Scan QR Code",
+  "confirmSendTitle": "Confirm Send",
+  "confirmSendDescription": "Transactions are irreversible, so make sure that these details match exactly."
 }
