--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -3,6 +3,9 @@
   "continueText": "Continuar",
   "cancel": "Cancelar",
   "unknownError": "Erro desconhecido.",
+  "amount": "Valor",
+  "networkFee": "Taxa da Rede",
+  "address": "Endereço",
   "fieldEmptyError": "Este campo não pode ficar vazio.",
   "welcomeTitle": "Bem-vindo!",
   "welcomeDescription": "A Light Monero Wallet é uma das carteiras Monero mais simples. Nós o ajudaremos a configurar uma carteira e se conectar a um servidor.",
@@ -12,7 +15,6 @@
   "restoreWarningContinueButton": "Continuar",
   "connectionSetupTitle": "Configuração da Conexão",
   "connectionSetupDescription": "Vamos configurar uma conexão com o LWS.",
-  "connectionSetupAddressLabel": "Endereço",
   "connectionSetupAddressHint": "ex: 192.168.1.1:18090 ou exemplo.com:18090",
   "connectionSetupProxyPortLabel": "Porta do Proxy HTTP (opcional)",
   "connectionSetupProxyPortHint": "ex: 4444 para I2P",
@@ -59,8 +61,6 @@
   "receiveShowSubaddressButton": "Mostrar Subendereço",
   "receiveShowPrimaryAddressButton": "Mostrar Endereço Primário",
   "sendTitle": "Enviar",
-  "sendAddressLabel": "Endereço",
-  "sendAmountLabel": "Valor",
   "sendSendButton": "Enviar",
   "sendTransactionSuccessfullySent": "Transação enviada com sucesso!",
   "sendOpenAliasResolveError": "OpenAlias inválido.",
@@ -75,8 +75,6 @@
   "settingsDeleteWalletDialogDeleteButton": "Excluir",
   "txDetailsTitle": "Transação",
   "txDetailsHashLabel": "Hash",
-  "txDetailsAmountLabel": "Valor",
-  "txDetailsFeeLabel": "Taxa",
   "txDetailsTimeAndDateLabel": "Data e Hora",
   "txDetailsConfirmationHeightLabel": "Bloco de Confirmação",
   "txDetailsConfirmationsLabel": "Confirmações",
@@ -89,5 +87,7 @@
   "keysPublicSpendKey": "Chave Pública de Gasto",
   "keysSecretViewKey": "Chave Privada de Visualização",
   "keysPublicViewKey": "Chave Pública de Visualização",
-  "scanQrTitle": "Escanear QR Code"
+  "scanQrTitle": "Escanear QR Code",
+  "confirmSendTitle": "Confirm Send",
+  "confirmSendDescription": "Transactions are irreversible, so make sure that these details match exactly."
 }
