Home screen improvements

--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -6,6 +6,7 @@
   "amount": "Valor",
   "networkFee": "Taxa da Rede",
   "address": "Endereço",
+  "pending": "Pendente",
   "fieldEmptyError": "Este campo não pode ficar vazio.",
   "welcomeTitle": "Bem-vindo!",
   "welcomeDescription": "A Light Monero Wallet é uma das carteiras Monero mais simples. Nós o ajudaremos a configurar uma carteira e se conectar a um servidor.",
@@ -52,7 +53,6 @@
   "homeTransactionsTitle": "Transações",
   "homeOutgoingTxSemanticLabel": "Transação de Saída",
   "homeIncomingTxSemanticLabel": "Transação de Entrada",
-  "homeTransactionPending": "Pendente",
   "homeTransactionConfirmed": "Confirmado",
   "homeNoTransactions": "Sem transações",
   "receivePrimaryAddressWarn": "Aviso: Para maior privacidade, considere usar subendereços se o seu servidor de light wallet os suportar.",
