--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -6,6 +6,7 @@
   "amount": "Amount",
   "networkFee": "Network Fee",
   "address": "Address",
+  "pending": "Pending",
   "fieldEmptyError": "This field cannot be empty.",
   "welcomeTitle": "Welcome!",
   "welcomeDescription": "Light Monero Wallet is one of the simplest Monero wallets. We will help you set up a wallet and connect to a server.",
@@ -52,7 +53,6 @@
   "homeTransactionsTitle": "Transactions",
   "homeOutgoingTxSemanticLabel": "Outgoing Transaction",
   "homeIncomingTxSemanticLabel": "Incoming Transaction",
-  "homeTransactionPending": "Pending",
   "homeTransactionConfirmed": "Confirmed",
   "homeNoTransactions": "No transactions",
   "receivePrimaryAddressWarn": "Warning: For better privacy, consider using subaddresses if supported by your light wallet server.",
