Break keys screen into 2

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -3,6 +3,7 @@
   "continueText": "Continue",
   "cancel": "Cancel",
   "unknownError": "Unknown error.",
+  "warning": "Warning",
   "amount": "Amount",
   "networkFee": "Network Fee",
   "address": "Address",
@@ -70,6 +71,14 @@
   "settingsNotifyNewTxs": "Notify New Transactions",
   "settingsLanguageLabel": "Language",
   "settingsDisplayCurrencyLabel": "Display Currency",
+  "settingsLwsViewKeysLabel": "LWS View Keys",
+  "settingsLwsViewKeysButton": "View",
+  "settingsSecretKeysLabel": "Secret Restore Keys",
+  "settingsSecretKeysButton": "View",
+  "settingsViewLwsKeysDialogText": "Only share this information with your LWS server. These keys allow the holder to permanently see all transactions related to your wallets. Sharing these with an untrusted person will significantly harm your privacy.",
+  "settingsViewLwsKeysDialogRevealButton": "Reveal",
+  "settingsViewSecretKeysDialogText": "Do not share these keys with anyone, including anyone claiming to be support. If you receive a request to provide these, you are being scammed. If you provide this information to another person, you will lose your money and it cannot be recovered.",
+  "settingsViewSecretKeysDialogRevealButton": "Reveal",
   "settingsDeleteWalletButton": "Delete Wallet",
   "settingsDeleteWalletDialogText": "Are you sure you want to delete your wallet? You will lose access to your funds unless you have backed up your seed phrase.",
   "settingsDeleteWalletDialogDeleteButton": "Delete",
@@ -80,13 +89,15 @@
   "txDetailsConfirmationsLabel": "Confirmations",
   "txDetailsViewKeyLabel": "View Key",
   "txDetailsRecipientsLabel": "Recipients",
-  "keysTitle": "Keys",
-  "keysPrimaryAddress": "Primary Address",
-  "keysRestoreHeight": "Restore Height",
-  "keysSecretSpendKey": "Secret Spend Key",
-  "keysPublicSpendKey": "Public Spend Key",
-  "keysSecretViewKey": "Secret View Key",
-  "keysPublicViewKey": "Public View Key",
+  "lwsKeysTitle": "LWS Keys",
+  "lwsKeysPrimaryAddress": "Primary Address",
+  "lwsKeysRestoreHeight": "Restore Height",
+  "lwsKeysSecretViewKey": "Secret View Key",
+  "secretKeysTitle": "Secret Restore Keys",
+  "secretKeysMnemonic": "Seed",
+  "secretKeysPublicSpendKey": "Public Spend Key",
+  "secretKeysSecretSpendKey": "Secret Spend Key",
+  "secretKeysPublicViewKey": "Public View Key",
   "scanQrTitle": "Scan QR Code",
   "confirmSendTitle": "Confirm Send",
   "confirmSendDescription": "Transactions are irreversible, so make sure that these details match exactly."
