--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -3,6 +3,7 @@
   "continueText": "Continuar",
   "cancel": "Cancelar",
   "unknownError": "Erro desconhecido.",
+  "warning": "Atenção",
   "amount": "Valor",
   "networkFee": "Taxa da Rede",
   "address": "Endereço",
@@ -70,6 +71,14 @@
   "settingsNotifyNewTxs": "Notificar Novas Transações",
   "settingsLanguageLabel": "Idioma",
   "settingsDisplayCurrencyLabel": "Moeda Local",
+  "settingsLwsViewKeysLabel": "Chaves de Visualização do LWS",
+  "settingsLwsViewKeysButton": "Ver",
+  "settingsSecretKeysLabel": "Chaves Privadas de Restauração",
+  "settingsSecretKeysButton": "Ver",
+  "settingsViewLwsKeysDialogText": "Somente compartilhe estas informações com o seu servidor LWS. Essas chaves permitem que o portador veja permanentemente todas as transações relacionadas às suas carteiras. Compartilhá-las com uma pessoa não confiável prejudicará significativamente sua privacidade.",
+  "settingsViewLwsKeysDialogRevealButton": "Revelar",
+  "settingsViewSecretKeysDialogText": "Não compartilhe essas chaves com ninguém, incluindo pessoas que aleguem ser suporte. Se você receber um pedido para fornecê-las, está sendo vítima de um golpe. Se você fornecer essas informações a outra pessoa, perderá seu dinheiro e ele não poderá ser recuperado.",
+  "settingsViewSecretKeysDialogRevealButton": "Revelar",
   "settingsDeleteWalletButton": "Excluir Carteira",
   "settingsDeleteWalletDialogText": "Tem certeza que deseja excluir sua carteira? Você perderá acesso à seus fundos, a menos que tenha anotado sua semente.",
   "settingsDeleteWalletDialogDeleteButton": "Excluir",
@@ -80,13 +89,15 @@
   "txDetailsConfirmationsLabel": "Confirmações",
   "txDetailsViewKeyLabel": "Chave de Visualização",
   "txDetailsRecipientsLabel": "Destinatários",
-  "keysTitle": "Chaves",
-  "keysPrimaryAddress": "Endereço Primário",
-  "keysRestoreHeight": "Bloco de Restauração",
-  "keysSecretSpendKey": "Chave Privada de Gasto",
-  "keysPublicSpendKey": "Chave Pública de Gasto",
-  "keysSecretViewKey": "Chave Privada de Visualização",
-  "keysPublicViewKey": "Chave Pública de Visualização",
+  "lwsKeysTitle": "Chaves do LWS",
+  "lwsKeysPrimaryAddress": "Endereço Primário",
+  "lwsKeysRestoreHeight": "Bloco de Restauração",
+  "lwsKeysSecretViewKey": "Chave Privada de Visualização",
+  "secretKeysTitle": "Chaves Privadas de Restauração",
+  "secretKeysMnemonic": "Semente",
+  "secretKeysPublicSpendKey": "Chave Pública de Gasto",
+  "secretKeysSecretSpendKey": "Chave Privada de Gasto",
+  "secretKeysPublicViewKey": "Chave Pública de Visualização",
   "scanQrTitle": "Escanear QR Code",
   "confirmSendTitle": "Confirm Send",
   "confirmSendDescription": "Transactions are irreversible, so make sure that these details match exactly."
