--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -67,6 +67,7 @@
   "sendOpenAliasResolveError": "Invalid OpenAlias.",
   "sendInvalidAddressError": "Invalid address.",
   "sendInsufficientBalanceError": "Insufficient balance.",
+  "sendInsufficientBalanceToCoverFeeError": "Insufficient balance to cover the network fee.",
   "settingsTitle": "Settings",
   "settingsNotifyNewTxs": "Notify New Transactions",
   "settingsLanguageLabel": "Language",
