--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -45,6 +45,9 @@
   "navigationBarWallet": "Wallet",
   "navigationBarSettings": "Settings",
   "navigationBarKeys": "Keys",
+  "unlockButton": "Unlock",
+  "unlockReason": "Unlock wallet",
+  "unlockUnableToAuthError": "Unable to authenticate.",
   "homeConnecting": "Connecting",
   "homeSyncing": "Syncing",
   "homeHeight": "Height",
@@ -69,7 +72,10 @@
   "sendInsufficientBalanceError": "Insufficient balance.",
   "sendInsufficientBalanceToCoverFeeError": "Insufficient balance to cover the network fee.",
   "settingsTitle": "Settings",
-  "settingsNotifyNewTxs": "Notify New Transactions",
+  "settingsNotifyNewTxsLabel": "Notify New Transactions",
+  "settingsAppLockLabel": "App Lock",
+  "settingsAppLockUnlockReason": "Unlock wallet",
+  "settingsAppLockUnableToAuthError": "Unable to authenticate.",
   "settingsLanguageLabel": "Language",
   "settingsDisplayCurrencyLabel": "Display Currency",
   "settingsLwsViewKeysLabel": "LWS View Keys",
