--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -45,6 +45,9 @@
   "navigationBarWallet": "Carteira",
   "navigationBarSettings": "Configurações",
   "navigationBarKeys": "Chaves",
+  "unlockButton": "Desbloquear",
+  "unlockReason": "Desbloquear carteira",
+  "unlockUnableToAuthError": "Não foi possível autenticar.",
   "homeConnecting": "Conectando",
   "homeSyncing": "Sincronizando",
   "homeHeight": "Bloco",
@@ -69,7 +72,10 @@
   "sendInsufficientBalanceError": "Saldo insuficiente.",
   "sendInsufficientBalanceToCoverFeeError": "Saldo insuficiente para cobrir a taxa da rede.",
   "settingsTitle": "Configurações",
-  "settingsNotifyNewTxs": "Notificar Novas Transações",
+  "settingsNotifyNewTxsLabel": "Notificar Novas Transações",
+  "settingsAppLockLabel": "Desbloqueio com PIN/Biometria",
+  "settingsAppLockUnlockReason": "Desbloquear carteira",
+  "settingsAppLockUnableToAuthError": "Não foi possível autenticar.",
   "settingsLanguageLabel": "Idioma",
   "settingsDisplayCurrencyLabel": "Moeda Local",
   "settingsLwsViewKeysLabel": "Chaves de Visualização do LWS",
