--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -10,7 +10,7 @@
   "pending": "Pending",
   "fieldEmptyError": "This field cannot be empty.",
   "welcomeTitle": "Welcome!",
-  "welcomeDescription": "Light Monero Wallet is one of the simplest Monero wallets. We will help you set up a wallet and connect to a server.",
+  "welcomeDescription": "Skylight is one of the simplest Monero wallets. We will help you set up a wallet and connect to a server.",
   "welcomeGetStarted": "Get Started",
   "restoreWarningTitle": "Restore Warning",
   "restoreWarningDescription": "Are you sure? The server that you connect to will be able to see your past and future Monero transaction history.",
