--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -10,7 +10,7 @@
   "pending": "Pendente",
   "fieldEmptyError": "Este campo não pode ficar vazio.",
   "welcomeTitle": "Bem-vindo!",
-  "welcomeDescription": "A Light Monero Wallet é uma das carteiras Monero mais simples. Nós o ajudaremos a configurar uma carteira e se conectar a um servidor.",
+  "welcomeDescription": "A Skylight é uma das mais simples carteiras de Monero. Nós o ajudaremos a configurar uma carteira e se conectar à um servidor.",
   "welcomeGetStarted": "Começar",
   "restoreWarningTitle": "Aviso de Restauração",
   "restoreWarningDescription": "Você tem certeza? O servidor ao qual você se conectar poderá ver seu histórico de transações Monero passadas e futuras.",
