--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -77,6 +77,8 @@
   "settingsAppLockLabel": "App Lock",
   "settingsAppLockUnlockReason": "Unlock wallet",
   "settingsAppLockUnableToAuthError": "Unable to authenticate.",
+  "settingsVerboseLoggingLabel": "Verbose Logging",
+  "settingsVerboseLoggingDescription": "Logs wallet operations to a text file in the app's data folder for debugging purposes.",
   "settingsLanguageLabel": "Language",
   "settingsDisplayCurrencyLabel": "Display Currency",
   "settingsLwsViewKeysLabel": "LWS View Keys",
