--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -79,6 +79,10 @@
   "settingsAppLockUnableToAuthError": "Unable to authenticate.",
   "settingsVerboseLoggingLabel": "Verbose Logging",
   "settingsVerboseLoggingDescription": "Logs wallet operations to a text file in the app's data folder for debugging purposes.",
+  "settingsThemeLabel": "Theme",
+  "settingsThemeSystem": "System",
+  "settingsThemeLight": "Light",
+  "settingsThemeDark": "Dark",
   "settingsLanguageLabel": "Language",
   "settingsDisplayCurrencyLabel": "Display Currency",
   "settingsLwsViewKeysLabel": "LWS View Keys",
