--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -79,6 +79,10 @@
   "settingsAppLockUnableToAuthError": "Não foi possível autenticar.",
   "settingsVerboseLoggingLabel": "Logs Detalhados",
   "settingsVerboseLoggingDescription": "Registra operações da carteira em um arquivo de texto na pasta de dados do app para fins de depuração.",
+  "settingsThemeLabel": "Tema",
+  "settingsThemeSystem": "Sistema",
+  "settingsThemeLight": "Claro",
+  "settingsThemeDark": "Escuro",
   "settingsLanguageLabel": "Idioma",
   "settingsDisplayCurrencyLabel": "Moeda Local",
   "settingsLwsViewKeysLabel": "Chaves de Visualização do LWS",
